[tool.poetry]
name = "ike"
version = "0.0.0"
description = "multi-purpose evil functions"
authors = ["Sofia N. Lima <me@dzshn.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
